--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ openidl-mapper/referenceJson.json
 openidl-mapper/referenceJson2.json
 **/node_modules
 openidl-mapper/schema/Hack_openIDL_Tier3.json
+openidl-insurance-data-manager/server/config/*.json
