[1] Initial commit of openidl-main

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ openidl-mapper/referenceJson2.json
 openidl-mapper/schema/Hack_openIDL_Tier3.json
 openidl-insurance-data-manager/server/config/*.json
 openidl-secrets-manager/config/*.json
+hosts input.txt
+hosts update.txt
+hosts updated.txt
