--- a/openidl-insurance-data-manager/package.json
+++ b/openidl-insurance-data-manager/package.json
@@ -22,7 +22,7 @@
     "ibm-cloud-env": "^0.2.6",
     "js-yaml": "^3.12.0",
     "log4js": "^1.1.1",
-    "openidl-common-lib": "git+https://x-oauth-basic:4QkuZuP4oHNx32Nvzu3K@git.ng.bluemix.net/openIDL/openidl-common-lib.git#ken_dev",
+    "openidl-common-lib": "git+https://x-oauth-basic:${GITHUB_TOKEN}@git.ng.bluemix.net/openIDL/openidl-common-lib.git#ken_dev",
      "sort-json-array": "^0.1.7",
     "swagger-ui-express": "^3.0.10",
     "uuid": "^3.3.2",
