--- a/openidl-ui/package.json
+++ b/openidl-ui/package.json
@@ -46,7 +46,7 @@
     "ngx-cookie-service": "^1.0.10",
     "ngx-csv": "^0.3.1",
     "@progress/kendo-file-saver": "^1.1.0",
-    "openidl-common-ui": "git+https://x-oauth-basic:4QkuZuP4oHNx32Nvzu3K@git.ng.bluemix.net/openIDL/openidl-common-ui.git#develop",
+    "openidl-common-ui": "git+https://x-oauth-basic:${GITHUB_TOKEN}@git.ng.bluemix.net/openIDL/openidl-common-ui.git#develop",
     "passport": "^0.4.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.0.0",
