--- a/openidl-data-call-app/package.json
+++ b/openidl-data-call-app/package.json
@@ -23,7 +23,7 @@
         "js-yaml": "^3.12.0",
         "lodash": "4.17.15",
         "log4js": "4.3.2",
-        "openidl-common-lib": "git+https://x-oauth-basic:4QkuZuP4oHNx32Nvzu3K@git.ng.bluemix.net/openIDL/openidl-common-lib.git#develop",
+        "openidl-common-lib": "git+https://x-oauth-basic:${GITHUB_TOKEN}@git.ng.bluemix.net/openIDL/openidl-common-lib.git#develop",
         "swagger-ui-express": "^3.0.10",
         "uuid": "^3.3.2",
         "@sendgrid/mail": "^7.2.1",
