--- a/openidl-extraction-pattern-developer/package.json
+++ b/openidl-extraction-pattern-developer/package.json
@@ -15,6 +15,9 @@
     "url": "git@gitlab.aaisdirect.com:openidl/openidl-mongo-utilities.git"
   },
   "dependencies": {
+    "deep-equals": "0.0.2",
+    "json-diff": "^0.5.4",
+    "json2csv": "^5.0.6",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
