[1] Updating the ability to load secrets from AWS

--- a/openidl-k8s/Makefile
+++ b/openidl-k8s/Makefile
@@ -1,2 +1,4 @@
+DESTINATION = './charts/openidl-secrets/config'
+
 load_secrets:
-	node load-secrets $(SECRET_CLOUD) $(SECRET_ENVIRONMENT) $(SECRET_NODE)
+	node load-secrets $(SECRET_CLOUD) $(SECRET_ENVIRONMENT) $(SECRET_NODE) ${DESTINATION}
