--- a/openidl-mapper/package.json
+++ b/openidl-mapper/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "deep-equal": "^2.0.5",
+    "json-diff": "^0.5.4"
   },
   "devDependencies": {
     "chai": "^4.3.4",
