[US83677] Enable PPP Correlation for COVID-19 Report

--- a/openidl-mapper/.gitignore
+++ b/openidl-mapper/.gitignore
@@ -1,6 +1,10 @@
-test/data/fromSDMA/**.*
+test/data/fromSDMA/**
 output.json
 outputOfCompare.json
 testCovidDataSDMA.json
 BatchDataExpected.json
 totals.*
+queries/**
+covid-files/**
+launch.json
+server/config/**
