--- a/openidl-extraction-pattern-developer/package.json
+++ b/openidl-extraction-pattern-developer/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "deep-equals": "0.0.2",
+    "ibm-cloud-env": "^0.2.7",
     "json-diff": "^0.5.4",
     "json2csv": "^5.0.6",
     "log4js": "^6.3.0",
