--- a/openidl-mapper/package.json
+++ b/openidl-mapper/package.json
@@ -8,9 +8,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.12.0",
     "csvtojson": "^2.0.10",
     "deep-equal": "^2.0.5",
-    "json-diff": "^0.5.4"
+    "elasticsearch": "^16.7.2",
+    "json-diff": "^0.5.4",
+    "node-fetch": "^2.6.1",
+    "parse-address": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.3.4",
