[8] Create data-call-processor image and update charts

--- a/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
+++ b/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
@@ -45,6 +45,6 @@ spec:
         - containerPort: {{ .Values.global.datacallapp.port }}
         volumeMounts:
         - name: apkey
-          mountPath: "/app/server/config"
+          mountPath: "/server/config"
           readOnly: true
 {{- end }}
