--- a/openidl-k8s/charts/openidl-secrets/values.yaml
+++ b/openidl-k8s/charts/openidl-secrets/values.yaml
@@ -83,6 +83,18 @@ tolerations: []
 affinity: {}
 
 secrets:
+    - name: insurance-data-manager-mappings-config
+      file: config/insurance-data-manager-mappings-config.json
+      namespace: default
+    - name: insurance-data-manager-metadata-config
+      file: config/insurance-data-manager-metadata-config.json
+      namespace: default
+    - name: insurance-data-manager-constant-config
+      file: config/insurance-data-manager-constant-config.js
+      namespace: default
+    - name: insurance-data-manager-default-config
+      file: config/insurance-data-manager-default-config.json
+      namespace: default
     - name: data-call-app-default-config
       file: config/data-call-app-default-config.json
       namespace: default
