--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ openidl-secrets-manager/config/*.json
 hosts input.txt
 hosts update.txt
 hosts updated.txt
+openidl-common-ui/dist/
+openidl-ui/server/config/local-appid-config.json
