--- a/openidl-ui/package.json
+++ b/openidl-ui/package.json
@@ -5,69 +5,72 @@
     "start": "node server/index.js",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "serve": "ng serve --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "angular-6-datatable": "^0.8.0",
-    "bootstrap": "^3.3.7",
-    "cfenv": "^1.1.0",
-    "config": "^2.0.1",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.4",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "express-enforces-ssl": "^1.1.0",
-    "express-session": "^1.15.6",
-    "helmet": "^3.6.0",
-    "ibm-cloud-env": "^0.2.6",
-    "ibmcloud-appid": "^6.0.0",
-    "jquery": "^3.3.1",
-    "log4js": "^1.1.1",
-    "moment": "2.22.2",
-    "nconf": "^0.10.0",
-    "ng-pick-datetime": "6.0.16",
-    "ngx-bootstrap": "^3.0.1",
-    "ngx-clipboard": "11.1.9",
-    "ngx-cookie-service": "^1.0.10",
-    "ngx-csv": "^0.3.1",
+    "@angular/animations": "~12.0.0",
+    "@angular/common": "~12.0.0",
+    "@angular/compiler": "~12.0.0",
+    "@angular/core": "~12.0.0",
+    "@angular/forms": "~12.0.0",
+    "@angular/platform-browser": "~12.0.0",
+    "@angular/platform-browser-dynamic": "~12.0.0",
+    "@angular/router": "~12.0.0",
     "@progress/kendo-file-saver": "^1.1.0",
-    "openidl-common-ui": "git+https://x-oauth-basic:${GITHUB_TOKEN}@git.ng.bluemix.net/openIDL/openidl-common-ui.git#develop",
-    "passport": "^0.4.0",
-    "request-promise": "^4.2.2",
-    "rxjs": "^6.0.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
+    "angular-datatables": "~12.0.0",
+    "bootstrap": "^5.0.1",
+    "cfenv": "^1.2.4",
+    "config": "^3.3.6",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "datatables.net": "^1.10.25",
+    "datatables.net-bs4": "^1.10.20",
+    "datatables.net-dt": "^1.10.25",
+    "express": "^4.17.1",
+    "express-enforces-ssl": "^1.1.0",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "ibm-cloud-env": "^0.2.7",
+    "ibmcloud-appid": "^6.1.1",
+    "jquery": "^3.6.0",
+    "log4js": "^6.3.0",
+    "moment": "^2.29.1",
+    "nconf": "^0.11.2",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-clipboard": "^14.0.1",
+    "ngx-csv": "^0.3.2",
+    "nocache": "^2.1.0",
+    "passport": "^0.4.1",
+    "request-promise": "^4.2.6",
+    "rxjs": "^6.5.3",
+    "zone.js": "^0.11.4"
   },
   "engines": {
-    "node": "8.9.x",
-    "npm": "5.5.x"
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
   },
   "devDependencies": {
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0"
+    "@angular-devkit/build-angular": "~12.0.0",
+    "@angular/cli": "~12.0.0",
+    "@angular/compiler-cli": "~12.0.0",
+    "@types/datatables.net": "^1.10.19",
+    "@types/jasmine": "^3.7.6",
+    "@types/jasminewd2": "^2.0.9",
+    "@types/jquery": "^3.5.5",
+    "@types/node": "^15.12.0",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.3"
   }
 }
