--- a/openidl-common-ui/angular.json
+++ b/openidl-common-ui/angular.json
@@ -6,6 +6,9 @@
 		"openidl-angular": {
 			"projectType": "application",
 			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				},
 				"@schematics/angular:application": {
 					"strict": true
 				}
@@ -22,9 +25,11 @@
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-							"src/styles.css",
+							"src/custom-theme.scss",
+							"src/styles.scss",
 							"./node_modules/datatables.net-dt/css/jquery.dataTables.css",
 							"./node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css"
 						],
@@ -92,7 +97,8 @@
 						"polyfills": "src/polyfills.ts",
 						"tsConfig": "src/tsconfig.spec.json",
 						"karmaConfig": "src/karma.conf.js",
-						"styles": ["src/styles.css"],
+						"inlineStyleLanguage": "scss",
+						"styles": ["src/styles.scss"],
 						"scripts": [],
 						"assets": ["src/favicon.ico", "src/assets"]
 					}
