--- a/openidl-common-ui/angular.json
+++ b/openidl-common-ui/angular.json
@@ -27,17 +27,8 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-							"src/custom-theme.scss",
-							"src/styles.scss",
-							"./node_modules/datatables.net-dt/css/jquery.dataTables.css",
-							"./node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css"
-						],
-						"scripts": [
-							"./node_modules/jquery/dist/jquery.js",
-							"./node_modules/datatables.net/js/jquery.dataTables.js",
-							"./node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"
-						]
+						"styles": ["src/custom-theme.scss", "src/styles.scss"],
+						"scripts": []
 					},
 					"configurations": {
 						"production": {
