--- a/.github/workflows/publish-mapper.yml
+++ b/.github/workflows/publish-mapper.yml
@@ -15,6 +15,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
       - name: increment version
         run: npm version minor
+        working-directory: openidl-mapper
       - name: install
         run: npm install
         working-directory: openidl-mapper
