--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ hosts update.txt
 hosts updated.txt
 openidl-common-ui/dist/
 openidl-ui/server/config/local-appid-config.json
+openidl-common-ui/package-lock.json
+openidl-ui/package-lock.json
+openidl-carrier-ui/package-lock.json
+openidl-ui/.env
