--- a/openidl-common-ui/package.json
+++ b/openidl-common-ui/package.json
@@ -13,16 +13,16 @@
 		"registry": "https://artifactory.aaisdirect.com/artifactory/api/npm/npm-local/"
 	},
 	"dependencies": {
-		"@angular/animations": "^12.0.3",
-		"@angular/cdk": "^12.0.3",
-		"@angular/common": "^12.0.3",
-		"@angular/compiler": "^12.0.3",
-		"@angular/core": "^12.0.3",
-		"@angular/forms": "^12.0.3",
-		"@angular/material": "^12.0.3",
-		"@angular/platform-browser": "^12.0.3",
-		"@angular/platform-browser-dynamic": "^12.0.3",
-		"@angular/router": "^12.0.3",
+		"@angular/animations": "~12.1.2",
+		"@angular/cdk": "~12.1.2",
+		"@angular/common": "~12.1.2",
+		"@angular/compiler": "~12.1.2",
+		"@angular/core": "~12.1.2",
+		"@angular/forms": "~12.1.2",
+		"@angular/material": "~12.1.2",
+		"@angular/platform-browser": "~12.1.2",
+		"@angular/platform-browser-dynamic": "~12.1.2",
+		"@angular/router": "~12.1.2",
 		"@progress/kendo-file-saver": "^1.1.0",
 		"cfenv": "^1.2.4",
 		"config": "^3.3.6",
@@ -31,20 +31,18 @@
 		"ibmcloud-appid": "^6.1.1",
 		"moment": "^2.29.1",
 		"nconf": "^0.11.2",
-		"ngx-bootstrap": "^6.2.0",
-		"ngx-clipboard": "^14.0.1",
-		"ngx-cookie-service": "^12.0.0",
 		"ngx-csv": "^0.3.2",
 		"passport": "^0.4.1",
 		"request-promise": "^4.2.2",
-		"rxjs": "^6.5.3",
-		"zone.js": "^0.11.4"
+		"rxjs": "~6.6.0",
+		"tslib": "^2.2.0",
+		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^12.0.3",
-		"@angular/cli": "^12.0.3",
-		"@angular/compiler-cli": "^12.0.3",
-		"@angular/language-service": "^12.0.3",
+		"@angular-devkit/build-angular": "~12.1.2",
+		"@angular/cli": "~12.1.2",
+		"@angular/compiler-cli": "~12.1.2",
+		"@angular/language-service": "~12.1.2",
 		"@types/datatables.net": "^1.10.19",
 		"@types/jasmine": "^3.7.6",
 		"@types/jasminewd2": "^2.0.9",
@@ -60,6 +58,6 @@
 		"protractor": "^7.0.0",
 		"ts-node": "^10.0.0",
 		"tslint": "^6.1.3",
-		"typescript": "^4.2.3"
+		"typescript": "~4.3.2"
 	}
 }
