--- a/openidl-ui/package.json
+++ b/openidl-ui/package.json
@@ -10,16 +10,16 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~12.0.0",
-		"@angular/cdk": "^12.0.4",
-		"@angular/common": "~12.0.0",
-		"@angular/compiler": "~12.0.0",
-		"@angular/core": "~12.0.0",
-		"@angular/forms": "~12.0.0",
-		"@angular/material": "^12.0.4",
-		"@angular/platform-browser": "~12.0.0",
-		"@angular/platform-browser-dynamic": "~12.0.0",
-		"@angular/router": "~12.0.0",
+		"@angular/animations": "~12.1.2",
+		"@angular/cdk": "~12.1.2",
+		"@angular/common": "~12.1.2",
+		"@angular/compiler": "~12.1.2",
+		"@angular/core": "~12.1.2",
+		"@angular/forms": "~12.1.2",
+		"@angular/material": "~12.1.2",
+		"@angular/platform-browser": "~12.1.2",
+		"@angular/platform-browser-dynamic": "~12.1.2",
+		"@angular/router": "~12.1.2",
 		"@progress/kendo-file-saver": "^1.1.0",
 		"cfenv": "^1.2.4",
 		"config": "^3.3.6",
@@ -34,25 +34,25 @@
 		"log4js": "^6.3.0",
 		"moment": "^2.29.1",
 		"nconf": "^0.11.2",
-		"ngx-clipboard": "^14.0.1",
 		"ngx-csv": "^0.3.2",
 		"nocache": "^2.1.0",
 		"passport": "^0.4.1",
 		"request-promise": "^4.2.6",
-		"rxjs": "^6.5.3",
-		"zone.js": "^0.11.4"
+		"rxjs": "~6.6.0",
+		"tslib": "^2.2.0",
+		"zone.js": "~0.11.4"
 	},
 	"engines": {
 		"node": ">=14.0.0",
 		"npm": ">=7.0.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~12.0.0",
-		"@angular/cli": "~12.0.0",
-		"@angular/compiler-cli": "~12.0.0",
-		"@types/jasmine": "^3.7.6",
-		"@types/jasminewd2": "^2.0.9",
-		"@types/node": "^15.12.0",
+		"@angular-devkit/build-angular": "~12.1.2",
+		"@angular/cli": "~12.1.2",
+		"@angular/compiler-cli": "~12.1.2",
+		"@types/jasmine": "^3.8.1",
+		"@types/jasminewd2": "^2.0.10",
+		"@types/node": "^16.4.0",
 		"codelyzer": "^6.0.2",
 		"jasmine-core": "^3.7.1",
 		"jasmine-spec-reporter": "^7.0.0",
@@ -64,6 +64,6 @@
 		"protractor": "^7.0.0",
 		"ts-node": "^10.0.0",
 		"tslint": "^6.1.3",
-		"typescript": "^4.2.3"
+		"typescript": "~4.3.2"
 	}
 }
