--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
-		"start": "ng serve",
+		"start": "node projects/openidl-ui/server/index.js",
 		"build": "ng build",
 		"test": "ng test",
 		"watch": "ng build --project=openidl-ui --watch --configuration development",
@@ -22,7 +22,23 @@
 		"@angular/platform-browser": "~12.1.2",
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
+		"cfenv": "^1.2.4",
+		"config": "^3.3.6",
+		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"express-enforces-ssl": "^1.1.0",
+		"express-session": "^1.17.2",
+		"helmet": "^4.6.0",
+		"ibm-cloud-env": "^0.2.7",
+		"ibmcloud-appid": "^6.1.1",
+		"log4js": "^6.3.0",
+		"moment": "^2.29.1",
+		"nconf": "^0.11.2",
 		"ngx-csv": "^0.3.2",
+		"nocache": "^2.1.0",
+		"passport": "^0.4.1",
+		"request-promise": "^4.2.6",
 		"rxjs": "~6.6.0",
 		"tslib": "^2.2.0",
 		"zone.js": "~0.11.4"
@@ -33,6 +49,7 @@
 		"@angular/compiler-cli": "~12.1.2",
 		"@types/jasmine": "~3.8.0",
 		"@types/node": "^12.11.1",
+		"dotenv": "^10.0.0",
 		"jasmine-core": "~3.8.0",
 		"karma": "~6.3.0",
 		"karma-chrome-launcher": "~3.1.0",
