#9 added carrier ui into ui-workspace

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ openidl-ui/package-lock.json
 openidl-carrier-ui/package-lock.json
 openidl-ui/.env
 openidl-ui-workspace/package-lock.json
+openidl-ui-workspace/projects/openidl-carrier-ui/server/config/local-appid-config.json
+openidl-ui-workspace/projects/openidl-ui/server/config/local-appid-config.json
