--- a/openidl-ui-workspace/angular.json
+++ b/openidl-ui-workspace/angular.json
@@ -143,6 +143,118 @@
 					}
 				}
 			}
+		},
+		"openidl-carrier-ui": {
+			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				},
+				"@schematics/angular:application": {
+					"strict": true
+				}
+			},
+			"root": "projects/openidl-carrier-ui",
+			"sourceRoot": "projects/openidl-carrier-ui/src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:browser",
+					"options": {
+						"outputPath": "dist/openidl-carrier-ui",
+						"index": "projects/openidl-carrier-ui/src/index.html",
+						"main": "projects/openidl-carrier-ui/src/main.ts",
+						"polyfills": "projects/openidl-carrier-ui/src/polyfills.ts",
+						"tsConfig": "projects/openidl-carrier-ui/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/openidl-carrier-ui/src/favicon.ico",
+							"projects/openidl-carrier-ui/src/assets"
+						],
+						"styles": [
+							"projects/openidl-ui/src/styles/styles.scss",
+							"projects/openidl-ui/src/styles/custom-theme.scss"
+						],
+						"scripts": []
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "2mb",
+									"maximumError": "3mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "20kb",
+									"maximumError": "40kb"
+								}
+							],
+							"fileReplacements": [
+								{
+									"replace": "projects/openidl-carrier-ui/src/environments/environment.ts",
+									"with": "projects/openidl-carrier-ui/src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all",
+							"optimization": {
+								"scripts": true,
+								"styles": {
+									"minify": true,
+									"inlineCritical": false
+								},
+								"fonts": true
+							}
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "@angular-devkit/build-angular:dev-server",
+					"configurations": {
+						"production": {
+							"browserTarget": "openidl-carrier-ui:build:production"
+						},
+						"development": {
+							"browserTarget": "openidl-carrier-ui:build:development"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"extract-i18n": {
+					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"options": {
+						"browserTarget": "openidl-carrier-ui:build"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main": "projects/openidl-carrier-ui/src/test.ts",
+						"polyfills": "projects/openidl-carrier-ui/src/polyfills.ts",
+						"tsConfig": "projects/openidl-carrier-ui/tsconfig.spec.json",
+						"karmaConfig": "projects/openidl-carrier-ui/karma.conf.js",
+						"inlineStyleLanguage": "scss",
+						"assets": [
+							"projects/openidl-carrier-ui/src/favicon.ico",
+							"projects/openidl-carrier-ui/src/assets"
+						],
+						"styles": [
+							"projects/openidl-carrier-ui/src/styles.scss"
+						],
+						"scripts": []
+					}
+				}
+			}
 		}
 	},
 	"defaultProject": "openidl-common-ui"
