--- a/openidl-data-call-processor/.gitignore
+++ b/openidl-data-call-processor/.gitignore
@@ -6,6 +6,7 @@ node_modules/**
 #credentials
 server/config/local-cloudant-config.json
 server/config/local-certmanager-config.json
+server/config/local-kvs-config.json
 server/config/connection-profile.json
 server/config/unique-identifiers-config.json
 .nyc_output
