--- a/openidl-k8s/charts/openidl-data-call-processor/values.yaml
+++ b/openidl-k8s/charts/openidl-data-call-processor/values.yaml
@@ -93,6 +93,8 @@ secrets:
       file: mappings.json
     - name: certmanager-config
       file: local-certmanager-config.json
+    - name: kvs-config
+      file: local-kvs-config.json
     - name: mongodb-config
       file: local-mongo-config.json
     - name: cloudantdb-config
@@ -111,5 +113,3 @@ secrets:
       file: s3-bucket-config.json
     - name: uniqueidentifiersaais-config
       file: unique-identifiers-config.json
-    - name: off-chain-kvs-credentials
-      file: off-chain-kvs-credentials.json
