--- a/openidl-k8s/charts/openidl-insurance-data-manager/values.yaml
+++ b/openidl-k8s/charts/openidl-insurance-data-manager/values.yaml
@@ -86,6 +86,8 @@ secrets:
       file: local-cognito-config.json
     - name: certmanager-config
       file: local-certmanager-config.json
+    - name: kvs-config
+      file: local-kvs-config.json
     - name: mongodb-config
       file: local-mongo-config.json
     - name: cloudantdb-config
