--- a/openidl-data-call-app/server/config/mappings.json
+++ b/openidl-data-call-app/server/config/mappings.json
@@ -31,8 +31,8 @@
     },
     "off-chain-kvs-credentials": {
         "searchPatterns": [
-            "env:OFF_CHAIN_KVS_CREDENTIALS",
-            "file:/server/config/off-chain-kvs-credentials.json"
+            "env:OFF_CHAIN_KVS_CONFIG",
+            "file:/server/config/local-kvs-config.json"
         ]
     }
 }
