--- a/openidl-insurance-data-manager/deployment.yml
+++ b/openidl-insurance-data-manager/deployment.yml
@@ -34,6 +34,9 @@ spec:
           mountPath: /server/config/local-certmanager-config.json
           subPath: certmanager
         - name: apkey
+          mountPath: /server/config/local-kvs-config.json
+          subPath: kvs
+        - name: apkey
           mountPath: /server/config/local-mongo-config.json
           subPath: mongodb
         - name: apkey
