--- a/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
+++ b/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
@@ -25,8 +25,9 @@ spec:
       hostAliases:
       - ip: {{ .Values.global.minikubeip }}
         hostnames:
-        - "peer0.org1.example.com"
-        - "peer0.org2.example.com"
+        - "peer0.aais.example.com"
+        - "peer0.analytics.example.com"
+        - "peer0.carrier.example.com"
         - "orderer.example.com"
       {{- end }}
       # {{- with .Values.imagePullSecrets }}
