removed appid references. updated the idp authentication to take generic name idp-config

--- a/openidl-carrier-ui/manifest.yml
+++ b/openidl-carrier-ui/manifest.yml
@@ -9,5 +9,4 @@ applications:
   domain: mybluemix.net
   host: env-host
   env:
-    APPID_CONFIG: <value goes here>
-    COGNITO_CONFIG: <value goes here>
+    IDP_CONFIG: <value goes here>
