--- a/openidl-data-call-app/server/config/mappings.json
+++ b/openidl-data-call-app/server/config/mappings.json
@@ -11,15 +11,9 @@
             "file:/server/config/local-mongo-config.json"
         ]
     },
-    "appid-credentials": {
+    "idp-credentials": {
         "searchPatterns": [
-            "env:APPID_CONFIG",
-            "file:/server/config/local-appid-config.json"
-        ]
-    },
-    "cognito-credentials": {
-        "searchPatterns": [
-            "env:COGNITO_CONFIG",
+            "env:IDP_CONFIG",
             "file:/server/config/local-cognito-config.json"
         ]
     },
