--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openidl-org/openidl-common-lib",
-  "version": "0.1.2",
+  "version": "0.1.5",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -38,9 +38,10 @@
     "ibmcloud-appid": "^6.0.0",
     "lodash": "^4.17.21",
     "log4js": "4.3.2",
-    "mongodb": "3.3.0-beta2",
+    "mongodb": "3.5.7",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
+    "passport-cognito": "^0.2.2",
     "request-promise": "^4.2.2",
     "safe-eval": "^0.4.1"
   },
