--- a/openidl-utilities/manifest.yaml
+++ b/openidl-utilities/manifest.yaml
@@ -11,6 +11,5 @@ applications:
   health-check-http-endpoint: /health
   host: env-host
   env:
-    APPID_CONFIG: env-appid
-    COGNITO_CONFIG: env-cognito
+    IDP_CONFIG: env-cognito
     IBM_CERTIFICATE_MANAGER_CONFIG: <cert value goes here>
