--- a/openidl-carrier-ui/Dockerfile
+++ b/openidl-carrier-ui/Dockerfile
@@ -11,12 +11,16 @@ RUN apk update && apk upgrade && \
 WORKDIR /app
 COPY . .
 
+RUN npm install @angular/cli@11.2.11 -g
+
+RUN mv -f npmrc ~/.npmrc 2>/dev/null; true
 RUN npm install
 
 RUN mkdir lib
 RUN cp -r node_modules/openidl-common-ui/* lib/
-RUN npm install @angular/cli -g
 
+
+RUN ng config -g cli.warnings.versionMismatch false
 RUN ng build --prod
 
 EXPOSE 8080
