--- a/openidl-data-call-processor/package.json
+++ b/openidl-data-call-processor/package.json
@@ -13,7 +13,7 @@
     },
     "dependencies": {
         "@cloudant/cloudant": "^3.0.1",
-        "@openidl-org/openidl-common-lib": "^0.1.5",
+        "@openidl-org/openidl-common-lib": "^0.1.9",
         "@sendgrid/mail": "^7.2.1",
         "aws-sdk": "2.474.0",
         "config": "^2.0.1",
@@ -22,6 +22,7 @@
         "ibm-cloud-env": "^0.2.6",
         "log4js": "4.3.2",
         "moment": "^2.29.1",
+        "mongodb": "^3.6.7",
         "object-sizeof": "^1.4.0",
         "sleep": "^6.1.0",
         "uuid": "^3.3.2"
