--- a/openidl-data-call-processor/server/config/mappings.json
+++ b/openidl-data-call-processor/server/config/mappings.json
@@ -11,15 +11,9 @@
             "file:/server/config/local-mongo-config.json"
         ]
     },
-    "IBM-certificate-manager-credentials": {
+    "kvs-credentials": {
         "searchPatterns": [
-            "env:IBM_CERTIFICATE_MANAGER_CONFIG",
-            "file:/server/config/local-certmanager-config.json"
-        ]
-    },
-    "off-chain-kvs-credentials": {
-        "searchPatterns": [
-            "env:OFF_CHAIN_KVS_CONFIG",
+            "env:KVS_CONFIG",
             "file:/server/config/local-kvs-config.json"
         ]
     }
