updated startup script to include multiple chaincode installation. added pdc to deployment script

--- a/openidl-transactional-data-event-listener/.gitignore
+++ b/openidl-transactional-data-event-listener/.gitignore
@@ -5,4 +5,7 @@ node_modules/**
 
 #credentials
 server/config/local-cloudant-config.json
+server/config/local-kvs-config.json
+server/config/connection-profile.json
+server/config/s3-bucket-config.json
 
