--- a/openidl-utilities/package.json
+++ b/openidl-utilities/package.json
@@ -26,7 +26,8 @@
         "lodash": "^4.17.11",
         "log4js": "^4.3.2",
         "nconf": "^0.10.0",
-        "@openidl-org/openidl-common-lib": "^0.4.9",
+        "node-fetch": "^2.6.1",
+        "@openidl-org/openidl-common-lib": "^0.5.2",
         "passport": "^0.4.0",
         "q": "^1.4.1",
         "request": "^2.88.0",
