--- a/openidl-chaincode/chaincode/openidl/collection-config-analytics-aais.json
+++ b/openidl-chaincode/chaincode/openidl/collection-config-analytics-aais.json
@@ -1,7 +1,7 @@
 [
    {
       "name":"analytics_aais_pdc",
-      "policy": "OR('analyticsmsp.member', 'trvmsp.member')",
+      "policy": "OR('analyticsmsp.member', 'aaismsp.member')",
       "requiredPeerCount":0,
       "maxPeerCount":0,
       "blockToLive":0
