--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openidl-org/openidl-common-lib",
-  "version": "0.4.9",
+  "version": "0.5.2",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -26,15 +26,13 @@
     "@cloudant/cloudant": "4.2.1",
     "@ibm-functions/iam-token-manager": "^1.0.3",
     "@sendgrid/mail": "^7.2.1",
-    "config": "^2.0.1",
-    "cors": "^2.8.4",
+    "cfenv": "^1.1.0",
     "express-enforces-ssl": "^1.1.0",
     "fabric-ca-client": "^2.2.3",
     "fabric-network": "^2.2.3",
     "ibmcloud-appid": "^6.0.0",
     "log4js": "^4.3.2",
     "mongodb": "^3.6.10",
-    "nconf": "^0.10.0",
     "node-vault":"^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
