--- a/openidl-data-call-app/package.json
+++ b/openidl-data-call-app/package.json
@@ -11,7 +11,7 @@
         "dev-test": "cross-env NODE_CONFIG_DIR=./server/config nyc mocha --timeout 600000 --exit"
     },
     "dependencies": {
-        "@openidl-org/openidl-common-lib": "^0.4.9",
+        "@openidl-org/openidl-common-lib": "^0.5.2",
         "@sendgrid/mail": "^7.2.1",
         "body-parser": "^1.18.3",
         "config": "^2.0.1",
@@ -25,6 +25,7 @@
         "lodash": "^4.17.21",
         "log4js": "^4.3.2",
         "moment": "^2.27.0",
+        "node-fetch": "^2.6.1",
         "swagger-ui-express": "^3.0.10",
         "uuid": "^3.3.2"
     },
