--- a/openidl-insurance-data-manager/package.json
+++ b/openidl-insurance-data-manager/package.json
@@ -11,7 +11,7 @@
     "dev-test": "mocha --timeout 600000 --exit"
   },
   "dependencies": {
-     "@openidl-org/openidl-common-lib": "^0.4.9",
+    "@openidl-org/openidl-common-lib": "^0.5.2",
     "@sendgrid/mail": "^7.2.1",
     "body-parser": "^1.18.3",
     "config": "^2.0.1",
@@ -24,6 +24,7 @@
     "http-errors": "~1.6.2",
     "js-yaml": "^3.12.0",
     "log4js": "^4.3.2",
+    "node-fetch": "^2.6.1",
     "sort-json-array": "^0.1.7",
     "swagger-ui-express": "^3.0.10",
     "uuid": "^3.3.2"
