--- a/openidl-ui/package.json
+++ b/openidl-ui/package.json
@@ -20,6 +20,7 @@
 		"@angular/platform-browser": "~12.1.2",
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
+		"@openidl-org/openidl-common-lib": "^0.5.2",
 		"@progress/kendo-file-saver": "^1.1.0",
 		"cfenv": "^1.2.4",
 		"config": "^3.3.6",
