Removed cfenv dependency. updated the start up script. Updated the chaincode to check access for org

--- a/openidl-k8s/charts/openidl-insurance-data-manager/values.yaml
+++ b/openidl-k8s/charts/openidl-insurance-data-manager/values.yaml
@@ -6,10 +6,12 @@ replicaCount: 1
 
 image:
     # repository: openidl/insurance-data-manager
-    repository: ghcr.io/openidl-org/openidl-insurance-data-manager
+    # repository: ghcr.io/openidl-org/openidl-insurance-data-manager
+    repository: ghcr.io/openidl-org/insurance-data-manager
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: latest
+    # tag: latest
+    tag: 0.0.2
 
 imagePullSecrets: []
 nameOverride: ""
