--- a/openidl-k8s/charts/openidl-data-call-app/values.yaml
+++ b/openidl-k8s/charts/openidl-data-call-app/values.yaml
@@ -6,10 +6,12 @@ replicaCount: 1
 
 image:
     # repository: openidl/data-call-app
-    repository: ghcr.io/openidl-org/openidl-data-call-app
+    # repository: ghcr.io/openidl-org/openidl-data-call-app
+    repository: ghcr.io/openidl-org/data-call-app
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: latest
+    # tag: latest
+    tag: 0.0.2
 
 imagePullSecrets: []
 nameOverride: ""
