#7 update api deployment.yml files to deal with networking issue

--- a/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
+++ b/openidl-k8s/charts/openidl-data-call-app/templates/deployment.yml
@@ -29,6 +29,7 @@ spec:
         - "peer0.analytics.example.com"
         - "peer0.carrier.example.com"
         - "orderer.example.com"
+        - "host.minikube.internal"
       {{- end }}
       # {{- with .Values.imagePullSecrets }}
       # imagePullSecrets:
