--- a/openidl-k8s/charts/openidl-data-call-processor/templates/deployment.yaml
+++ b/openidl-k8s/charts/openidl-data-call-processor/templates/deployment.yaml
@@ -29,6 +29,7 @@ spec:
         - "peer0.analytics.example.com"
         - "peer0.carrier.example.com"
         - "orderer.example.com"
+        - "host.minikube.internal"
       {{- end }}
       # {{- with .Values.imagePullSecrets }}
       # imagePullSecrets:
