changes to helm charts ingress

--- a/openidl-k8s/charts/openidl-insurance-data-manager/templates/ingress.yml
+++ b/openidl-k8s/charts/openidl-insurance-data-manager/templates/ingress.yml
@@ -28,7 +28,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - host: insurance-data-manager-aais.test.io
+    - host: insurance-data-manager-aais.internal.{{ .Values.global.clusterurl }}
       http:
         paths:
           - path: /
