--- a/openidl-k8s/charts/openidl-data-call-app/templates/ingress.yml
+++ b/openidl-k8s/charts/openidl-data-call-app/templates/ingress.yml
@@ -1,5 +1,5 @@
 {{- if .Values.global.datacallapp.install }}
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.global.datacallapp.ingressenabled }}
 {{- $fullName := include "openidl-data-call-app.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 apiVersion: networking.k8s.io/v1
