--- a/openidl-k8s/charts/openidl-ui/templates/ingress.yml
+++ b/openidl-k8s/charts/openidl-ui/templates/ingress.yml
@@ -1,5 +1,5 @@
 {{- if .Values.global.ui.install }}
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.global.ui.ingressenabled }}
 {{- $fullName := include "openidl-ui.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -28,7 +28,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - host: ui-aais.test.io
+    - host: {{ .Values.global.ui.ingresshostname }}
       http:
         paths:
           - path: /
