--- a/openidl-k8s/openidl-aais-k8s/global-values.yaml
+++ b/openidl-k8s/openidl-aais-k8s/global-values.yaml
@@ -1,22 +1,28 @@
 global:
-  clusterurl: aais.test.io
+  clusterurl: aaisdemo.com
   appsecret: apps-secret
   datacallapp:
     install: true
     port: 8080
     targetport: 8080
     servicename: data-call-app-service
-    ingresshostname: data-call-app-aais.test.io
+    ingressenabled: false
+    ingresshostname: data-call-app-service.aais.dev.internal.aaisdemo.com
+    publicingresshostname: data-call-app-service.aais.dev.aaisdemo.com
   ui:
     install: true
     servicename: ui-service
     port: 8080
     targetport: 8080
+    ingressenabled: false
+    ingresshostname: openidl.aais.dev.aaisdemo.com
   insurancedatamanager:
     install: true
     port: 8080
     targetport: 8080
     servicename: insurance-data-manager-service
+    ingressenabled: false
+    ingresshostname: insurance-data-manager-service.aais.dev.aaisdemo.com
   datacallprocessor:
     install: true
     port: 8080
