--- a/openidl-k8s/openidl-analytics-k8s/global-values.yaml
+++ b/openidl-k8s/openidl-analytics-k8s/global-values.yaml
@@ -1,17 +1,21 @@
 global:
-  clusterurl: aais.test.io
+  clusterurl: aaisanalyticsdemo.com
   appsecret: apps-secret
   datacallapp:
     install: true
     port: 8080
     targetport: 8080
     servicename: data-call-app-service
-    ingresshostname: data-call-app-aais.test.io
+    ingressenabled: false
+    ingresshostname: data-call-app-service.analytics.dev.internal.aaisanalyticsdemo.com
+    publicingresshostname: data-call-app-service.analytics.dev.aaisanalyticsdemo.com
   ui:
     install: true
     servicename: ui-service
     port: 8080
     targetport: 8080
+    ingressenabled: false
+    ingresshostname: openidl.analytics.dev.aaisanalyticsdemo.com
   datacallmoodlistener:
     install: true
     port: 8080
@@ -22,6 +26,3 @@ global:
     port: 8080
     targetport: 8080
     servicename: transactional-data-event-listener-service
-  mongodb:
-    install: true
-    servicename: mongodb-service
