--- a/openidl-k8s/openidl-carrier-k8s/charts/openidl-data-call-app/values.yaml
+++ b/openidl-k8s/openidl-carrier-k8s/charts/openidl-data-call-app/values.yaml
@@ -49,7 +49,8 @@ service:
 ingress:
     enabled: false
     annotations:
-        { kubernetes.io/ingress.class: "public-iks-k8s-nginx" }
+        { kubernetes.io/ingress.class: "haproxy" }
+        # { kubernetes.io/ingress.class: "public-iks-k8s-nginx" }
         # kubernetes.io/ingress.class: nginx
         # kubernetes.io/tls-acme: "true"
     hosts:
