--- a/openidl-k8s/openidl-carrier-k8s/global-values.yaml
+++ b/openidl-k8s/openidl-carrier-k8s/global-values.yaml
@@ -1,30 +1,33 @@
 global:
-  clusterurl: aais.test.io
+  clusterurl: aaiscarrierdemo.com
   appsecret: apps-secret
   datacallapp:
     install: true
     port: 8080
     targetport: 8080
     servicename: data-call-app-service
-    ingresshostname: data-call-app-aais.test.io
+    ingressenabled: false
+    ingresshostname: data-call-app-service.carrier.dev.internal.aaiscarrierdemo.com
+    publicingresshostname: data-call-app-service.carrier.dev.aaiscarrierdemo.com
   carrierui:
     install: true
     servicename: carrier-ui-service
     port: 8080
     targetport: 8080
+    ingressenabled: false
+    ingresshostname: openidl.carrier.dev.aaiscarrierdemo.com
   insurancedatamanager:
     install: true
     port: 8080
     targetport: 8080
     servicename: insurance-data-manager-service
+    ingressenabled: false
+    ingresshostname: insurance-data-manager-service.carrier.dev.aaiscarrierdemo.com
   datacallprocessor:
     install: true
     port: 8080
     targetport: 8080
     servicename: data-call-processor-service
-  mongodb:
-    install: true
-    servicename: mongodb-service
   upload:
     install: true
     port: 80
