--- a/openidl-k8s/charts/openidl-utilities/values.yaml
+++ b/openidl-k8s/charts/openidl-utilities/values.yaml
@@ -1,17 +1,17 @@
-# Default values for openidl-data-call-app.
+# Default values for openidl-utilities.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-    # repository: openidl/data-call-app
-    # repository: ghcr.io/openidl-org/openidl-data-call-app
-    repository: ghcr.io/openidl-org/data-call-app
+    # repository: openidl/utilities
+    # repository: ghcr.io/openidl-org/openidl-utilities
+    repository: ghcr.io/openidl-org/utilities
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     # tag: latest
-    tag: 0.0.4
+    tag: 0.0.5
 
 imagePullSecrets: []
 nameOverride: ""
@@ -88,9 +88,9 @@ tolerations: []
 affinity: {}
 
 secrets:
-    - name: fabric-config
+    - name: utilities-fabric-config
       file: fabric-config.json
-    - name: admin-config
+    - name: utilities-admin-config
       file: admin-config.json
     - name: cognito-config
       file: local-cognito-config.json
@@ -104,7 +104,7 @@ secrets:
       file: connection-profile.json
     - name: db-config
       file: local-db-config.json
-    - name: default-config
+    - name: utilities-default-config
       file: default.json
     - name: utilities-mappings-config
       file: mappings.json
