--- a/openidl-k8s/global-values-aais.yaml
+++ b/openidl-k8s/global-values-aais.yaml
@@ -10,6 +10,14 @@ global:
     ingressenabled: false
     ingresshostname: data-call-app-service.aais.dev.internal.aaisdemo.com
     publicingresshostname: data-call-app-service.aais.dev.aaisdemo.com
+  utilities:
+    install: true
+    port: 8080
+    targetport: 8080
+    servicename: utilities-service
+    ingressenabled: false
+    ingresshostname: utilities-service.aais.dev.internal.aaisdemo.com
+    publicingresshostname: utilities-service.aais.dev.aaisdemo.com
   ui:
     install: true
     servicename: ui-service
