--- a/openidl-k8s/global-values-carrier.yaml
+++ b/openidl-k8s/global-values-carrier.yaml
@@ -10,6 +10,14 @@ global:
     ingressenabled: false
     ingresshostname: data-call-app-service.carrier.dev.internal.aaiscarrierdemo.com
     publicingresshostname: data-call-app-service.carrier.dev.aaiscarrierdemo.com
+  utilities:
+    install: true
+    port: 8080
+    targetport: 8080
+    servicename: utilities-service
+    ingressenabled: false
+    ingresshostname: utilities-service.carrier.dev.internal.aaiscarrierdemo.com
+    publicingresshostname: utilities-service.carrier.dev.aaiscarrierdemo.com
   carrierui:
     install: true
     servicename: carrier-ui-service
